--- a/src/app/common/navigation/navigation.component.html
+++ b/src/app/common/navigation/navigation.component.html
@@ -21,14 +21,24 @@
   <mat-sidenav-content>
     <mat-toolbar>
       <button
+        *ngIf="isHandset$ | async"
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+      >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>di-v2</span>
+
+      <mat-form-field style="width: 100%; font-size: 14px">
+        <input
+          autocomplete="off"
+          type="text"
+          matInput
+          placeholder="Search"
+          [formControl]="searchControl"
+        >
+      </mat-form-field>
     </mat-toolbar>
 
     <div class="sidenav-container__content">
