--- a/src/app/common/card/card.template.html
+++ b/src/app/common/card/card.template.html
@@ -30,7 +30,7 @@
   </mat-card-content>
 
   <mat-card-actions>
-    <button mat-button>EDIT</button>
+    <button mat-button (click)="onEdit()">EDIT</button>
     <button mat-button>DELETE</button>
   </mat-card-actions>
 </mat-card>
