--- a/src/app/user/user-details/user-details.component.html
+++ b/src/app/user/user-details/user-details.component.html
@@ -8,6 +8,7 @@
   </div>
 
   <div class="details__body" [formGroup]="form">
+    <!-- Name -->
     <mat-form-field>
       <input
         type="text"
@@ -18,6 +19,7 @@
       >
     </mat-form-field>
 
+    <!-- Email -->
     <mat-form-field>
       <input
         type="text"
@@ -28,6 +30,7 @@
       >
     </mat-form-field>
 
+    <!-- Phone -->
     <mat-form-field>
       <input
         type="text"
@@ -38,6 +41,7 @@
       >
     </mat-form-field>
 
+    <!-- Website -->
     <mat-form-field>
       <input
         type="text"
