--- a/src/app/common/card/card.template.html
+++ b/src/app/common/card/card.template.html
@@ -22,9 +22,9 @@
 
   <!-- Preview image -->
   <img
-    *ngIf="png"
+    *ngIf="image"
     mat-card-image
-    [src]="'assets/' + png"
+    [src]="image"
   >
 
   <!-- Content -->
