--- a/src/app/common/navigation/navigation.component.scss
+++ b/src/app/common/navigation/navigation.component.scss
@@ -19,3 +19,17 @@
   top: 0;
   z-index: 1;
 }
+
+.--icon {
+  transform: rotate(0);
+  animation: rotate-icon 0.5s ease-in-out forwards;
+}
+
+@keyframes rotate-icon {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
+}
