Add base crud functionality for user

--- a/src/app/common/card/card.template.html
+++ b/src/app/common/card/card.template.html
@@ -37,6 +37,6 @@
   <!-- Actions -->
   <mat-card-actions>
     <button mat-button (click)="onEdit()">EDIT</button>
-    <button mat-button>DELETE</button>
+    <button mat-button (click)="onDelete()">DELETE</button>
   </mat-card-actions>
 </mat-card>
