--- a/src/app/common/navigation/navigation.component.html
+++ b/src/app/common/navigation/navigation.component.html
@@ -58,7 +58,17 @@
         mat-icon-button
         (click)="onBack()"
       >
-        <mat-icon class="--icon" aria-label="Side nav toggle icon">arrow_back</mat-icon>
+        <mat-icon class="--icon">arrow_back</mat-icon>
+      </button>
+
+      <button
+        *ngIf="!isDetailsRouteActive"
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="onCreate()"
+      >
+        <mat-icon class="--icon">add</mat-icon>
       </button>
     </mat-toolbar>
 
