--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   gap: 16px;
 
   &__header, &__image {
-    width: 266px;
-    height: 266px;
+    width: 318px;
+    height: 318px;
   }
 
   &__header {
@@ -24,7 +24,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     flex: 1;
     display: flex;
     flex-direction: column;
-    max-width: 266px;
+    max-width: 318px;
   }
 
   &__row {
@@ -37,5 +37,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
   &__value {
     font-weight: 500;
+  }
+
+  &__actions {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
