Add base crud functionality

--- a/src/app/todo/form/todo-form.template.html
+++ b/src/app/todo/form/todo-form.template.html
@@ -16,14 +16,16 @@
     </mat-form-field>
 
     <!-- Body -->
-    <mat-form-field>
-      <input
+    <mat-form-field appearance="fill">
+      <textarea
         type="text"
         autocomplete="off"
         placeholder="Body"
         matInput
+        rows="8"
         formControlName="body"
       >
+      </textarea>
     </mat-form-field>
 
     <div class="details__actions">
